--- a/extension.yaml
+++ b/extension.yaml
@@ -30,6 +30,10 @@ apis:
   - apiName: secretmanager.googleapis.com
     reason: Securely storing and reading Snap OAuth 2.0 client secret
 
+roles:
+  - role: datastore.user
+    reason: Allows the extension to write updates to the database.
+
 params:
   - param: LOCATION
     label: Cloud Functions location
@@ -82,6 +86,11 @@ params:
     default: us-central1
     required: true
     immutable: true
+  - param: JUSTPASSME_ORGANIZATION_NAME
+    label: organization name from justpass.me dashboard
+    description: What is your justpass.me organization name?
+    type: string
+    required: true
   - param: JUSTPASSME_ID
     label: Client Id from justpass.me dashboard
     description: What is your justpass.me id?
