--- a/functions/package.json
+++ b/functions/package.json
@@ -23,18 +23,18 @@
     "firebase-admin": "^11.5.0",
     "firebase-functions": "^4.2.0",
     "jsonwebtoken": "^9.0.0",
-    "openid-client": "^5.4.1"
-  },
-  "devDependencies": {
+    "openid-client": "^5.4.1",
+    "typescript": "^4.9.0",
     "@types/cookie-parser": "^1.4.3",
     "@types/express-session": "^1.17.7",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
-    "@typescript-eslint/parser": "^5.12.0",
+    "@typescript-eslint/parser": "^5.12.0"
+  },
+  "devDependencies": {
     "eslint": "^8.9.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.25.4",
-    "firebase-functions-test": "^3.0.0",
-    "typescript": "^4.9.0"
+    "firebase-functions-test": "^3.0.0"
   },
   "private": true
 }
